--- a/index.ipynb
+++ b/index.ipynb
@@ -46,7 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution here  "
+    "# Your solution here  \n",
+    "NOTHING CHANGES! STICK WITH IT!"
    ]
   },
   {
@@ -59,11 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution here "
+    "# Your solution here \n",
+    "p_open_3_given_pick_1_car_3 = 0\n",
+    "p_open_3_given_pick_1_car_2 = 1\n",
+    "p_open_3_given_pick_1_car_1 = 0.5\n",
+    "\n",
+    "p_car_in_any = 1/3"
    ]
   },
   {
@@ -76,11 +82,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution here "
+    "# Your solution here \n",
+    "p_open_3 = (p_open_3_given_pick_1_car_1*p_car_in_any) + (p_open_3_given_pick_1_car_2*p_car_in_any) + (p_open_3_given_pick_1_car_3*p_car_in_any)\n",
+    "p_open_3 #denominator of bayes theorem"
    ]
   },
   {
@@ -93,11 +112,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3333333333333333\n",
+      "0.6666666666666666\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here"
+    "# Your solution here\n",
+    "#i=1\n",
+    "p_d1_given_h = (p_open_3_given_pick_1_car_1*p_car_in_any)/(p_open_3)\n",
+    "#i=2\n",
+    "p_d2_given_h = (p_open_3_given_pick_1_car_2*p_car_in_any)/(p_open_3)\n",
+    "\n",
+    "print(p_d1_given_h)\n",
+    "print(p_d2_given_h)"
    ]
   },
   {
@@ -113,42 +148,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
     "def make_a_deal(switch=True):\n",
-    "    doors = None\n",
-    "    car = None\n",
-    "    first_choice = None\n",
-    "    montes_options = None\n",
-    "    goat = None\n",
-    "    final_choice = None\n",
-    "    pass\n",
+    "    doors = [1,2,3]\n",
+    "    car = np.random.choice(doors)\n",
+    "    first_choice = np.random.choice(doors)\n",
+    "    montes_options = list((set(doors)-set([car])-set([first_choice])))\n",
+    "    goat = np.random.choice(montes_options)\n",
+    "    final_choice = (set(doors)-set([goat])-set([first_choice])).pop() if switch else first_choice\n",
+    "    return final_choice == car\n",
     "\n",
     "def monte_hall_sim(switch=True, num_trials=int(1e3)): \n",
-    "    winners = None\n",
-    "    state = None  # \"switching)\" if switch else \"not switching)\"\n",
+    "    winners = np.sum([make_a_deal(switch) for trials in range(num_trials)])\n",
+    "    state =  \"switching)\" if switch else \"not switching)\"\n",
     "    print(\"P(winning by \"+state+\" = {:.4f}\".format(winners/num_trials))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Uncomment and run the cells below "
+    "# Uncomment and run the cells below \n",
+    "make_a_deal()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(winning by switching) = 0.6681\n"
+     ]
+    }
+   ],
    "source": [
-    "#monte_hall_sim(switch=True, num_trials=int(1e5))\n",
+    "monte_hall_sim(switch=True, num_trials=int(1e5))\n",
     "\n",
     "\n",
     "\n",
@@ -157,11 +212,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(winning by not switching) = 0.3343\n"
+     ]
+    }
+   ],
    "source": [
-    "#monte_hall_sim(switch=False, num_trials=int(1e5))\n",
+    "monte_hall_sim(switch=False, num_trials=int(1e5))\n",
     "\n",
     "\n",
     "\n",
@@ -203,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
